Fixed dropdown menu spacing issue for all pages for desktop sizes

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -128,7 +128,7 @@ ul .hidden-links {
 #dropdown-menu {
   background-color: var(--white);
   position: absolute;
-  top: 8.2rem;
+  top: 9.4rem;
   left: 98rem;
   z-index: 5000;
   padding: 2.6rem 1.6rem;
