--- a/styles/index.css
+++ b/styles/index.css
@@ -225,8 +225,8 @@ ul .hidden-links {
 #dropdown-menu {
   background-color: var(--white);
   position: absolute;
-  top: 12.3rem;
-  left: 97rem;
+  top: 13.6rem;
+  left: 98rem;
   z-index: 5000;
   padding: 2.6rem 1.6rem;
   width: 23rem;
