--- a/styles/services.css
+++ b/styles/services.css
@@ -128,8 +128,8 @@ ul .hidden-links {
 #dropdown-menu {
   background-color: var(--white);
   position: absolute;
-  top: 8.2rem;
-  left: 93rem;
+  top: 9.4rem;
+  left: 98rem;
   z-index: 5000;
   padding: 2.6rem 1.6rem;
   width: 23rem;
