--- a/styles/testimonials.css
+++ b/styles/testimonials.css
@@ -120,8 +120,8 @@ nav ul {
 #dropdown-menu {
   background-color: var(--white);
   position: absolute;
-  top: 8.2rem;
-  left: 97rem;
+  top: 9.4rem;
+  left: 98rem;
   z-index: 5000;
   padding: 2.6rem 1.6rem;
   width: 23rem;
